<!--
  ~ Copyright 2016 George Cohn III
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Nutriscope</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter a product search string or UPC</string>
    <string name="search_title">Search</string>
    <string name="action_bump">Bump</string>
    <string name="scan_title">Scan barcode</string>
    <string name="product_poster_image">Product poster image</string>
    <string name="pref_api_status_key">api-status</string>
    <string name="search_timeout">10</string>
    <string name="api_status_nonetwork">Network is currently unavailable</string>
    <string name="api_status_nomatches">No matches found for this search</string>
    <string name="api_status_invalidsearch">Invalid search term</string>
    <string name="api_status_badserver">Problem communicating with the server</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="pref_autofocus">Autofocus</string>
    <string name="pref_autofocus_summary">Autofocus the camera when scanning UPC barcodes</string>
    <string name="pref_useflash">Flash</string>
    <string name="pref_useflash_summary">Use the camera flash when scanning UPC barcodes</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sorting_order">Sort</string>
    <string name="share_message">Share this to…</string>
    <string name="tab_name_description">DESCRIPTION</string>
    <string name="tab_name_ingredients">INGREDIENTS</string>
    <string name="tab_name_nutrition">NUTRITION</string>
    <string name="label_categories">Categories</string>
    <string name="label_labels_certifications_awards">Labels, certifications, awards</string>
    <string name="label_brands">Brands:</string>
    <string name="label_stores">Stores:</string>
    <string name="label_city_state_country_purchased">City, State, Country purchased</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_packaging">Packaging:</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_possible_allergens">Possible allergens</string>
    <string name="label_traces">Traces</string>
    <string name="label_additives">Additives:</string>
    <string name="label_nutrition_levels_for_100g">Nutrition levels for 100g</string>
    <string name="label_energy">Energy</string>
    <string name="label_fat">Fat</string>
    <string name="label_saturated_fat">– Saturated fat</string>
    <string name="label_carbohydrate">Carbohydrate</string>
    <string name="label_sugars">– Sugars</string>
    <string name="label_proteins">Proteins</string>
    <string name="label_salt">Salt</string>
    <string name="label_sodium">– Sodium</string>
    <string name="label_fiber">Fiber</string>
    <string name="description_fat_level_indicator">Fat level indicator</string>
    <string name="description_saturated_fat_level_indicator">Saturated fat level indicator</string>
    <string name="description_sugar_level_indicator">Sugar level indicator</string>
    <string name="description_salt_level_indicator">Salt level indicator</string>
    <string name="description_categories">Categories</string>
    <string name="description_labels">Labels</string>
    <string name="description_brands">Brands</string>
    <string name="description_stores">Stores</string>
    <string name="description_city_state_country_purchased">City, state, and country purchased</string>
    <string name="description_quantity">Quantity</string>
    <string name="description_packaging">Packaging</string>
    <string name="description_fat_level">Fat level</string>
    <string name="description_saturated_fat_level">Saturated fat level</string>
    <string name="description_sugar_level">Sugar level</string>
    <string name="description_salt_level">Salt level</string>
    <string name="description_energy">Energy</string>
    <string name="description_total_fat">Total fat</string>
    <string name="description_saturated_fat">Saturated fat</string>
    <string name="description_carbohydrates">Carbohydrates</string>
    <string name="description_sugars">Sugars</string>
    <string name="description_proteins">Proteins</string>
    <string name="description_salt">Salt</string>
    <string name="description_sodium">Sodium</string>
    <string name="description_fiber">Fiber</string>
    <string name="description_ingredients">Ingredients</string>
    <string name="description_possible_allergens">Possible allergens</string>
    <string name="description_traces">Traces</string>
    <string name="description_additives">Additives</string>
    <string name="description_photo_of_ingredients_label_on_package">Photo of ingredients label on package</string>
    <string name="no_data_found_for">No data found for %s</string>
    <string name="quantity_nutrient_in_level_qualtity">%s %s in %s quantity</string>

    <string-array name="sorting_modes">
        <item>By name</item>
        <item>By UPC</item>
    </string-array>

</resources>
