<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 George Cohn III
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_margin"
    android:layout_marginBottom="@dimen/text_margin"
    android:layout_marginEnd="@dimen/text_margin"
    android:layout_marginLeft="@dimen/text_margin"
    android:layout_marginRight="@dimen/text_margin"
    android:layout_marginStart="@dimen/text_margin"
    android:layout_marginTop="@dimen/text_margin"
    tools:context="com.creationgroundmedia.nutriscope.detail.DetailDescriptionFragment">

    <TextView
        android:id="@+id/CategoriesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/label_categories"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/description_categories"
        app:layout_constraintLeft_toLeftOf="@+id/CategoriesLabel"
        app:layout_constraintStart_toStartOf="@+id/CategoriesLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoriesLabel"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/labelsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:text="@string/label_labels_certifications_awards"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/categories"
        app:layout_constraintStart_toStartOf="@+id/categories"
        app:layout_constraintRight_toRightOf="@+id/categories"
        app:layout_constraintEnd_toEndOf="@+id/categories"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/labels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/description_labels"
        app:layout_constraintLeft_toLeftOf="@+id/labelsLabel"
        app:layout_constraintRight_toRightOf="@+id/labelsLabel"
        app:layout_constraintStart_toStartOf="@+id/labelsLabel"
        app:layout_constraintEnd_toEndOf="@+id/labelsLabel"
        app:layout_constraintTop_toBottomOf="@+id/labelsLabel"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/brandsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_brands"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/labels"
        app:layout_constraintStart_toStartOf="@+id/labels"
        app:layout_constraintTop_toBottomOf="@+id/labels" />

    <TextView
        android:id="@+id/brands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_brands"
        app:layout_constraintBottom_toBottomOf="@+id/brandsLabel"
        app:layout_constraintLeft_toRightOf="@+id/brandsLabel"
        app:layout_constraintStart_toEndOf="@+id/brandsLabel"
        app:layout_constraintTop_toTopOf="@+id/brandsLabel" />

    <TextView
        android:id="@+id/storesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_stores"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/brandsLabel"
        app:layout_constraintStart_toStartOf="@+id/brandsLabel"
        app:layout_constraintTop_toBottomOf="@+id/brandsLabel" />

    <TextView
        android:id="@+id/stores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_stores"
        app:layout_constraintBottom_toBottomOf="@+id/storesLabel"
        app:layout_constraintLeft_toRightOf="@+id/storesLabel"
        app:layout_constraintStart_toEndOf="@+id/storesLabel"
        app:layout_constraintTop_toBottomOf="@+id/brandsLabel"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_city_state_country_purchased"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/storesLabel"
        app:layout_constraintStart_toStartOf="@+id/storesLabel"
        app:layout_constraintTop_toBottomOf="@+id/stores"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_city_state_country_purchased"
        app:layout_constraintLeft_toLeftOf="@+id/cityLabel"
        app:layout_constraintStart_toStartOf="@+id/cityLabel"
        app:layout_constraintTop_toBottomOf="@+id/cityLabel"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/city"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_quantity"
        app:layout_constraintBottom_toBottomOf="@+id/quantityLabel"
        app:layout_constraintLeft_toRightOf="@+id/quantityLabel"
        app:layout_constraintStart_toEndOf="@+id/quantityLabel"
        app:layout_constraintTop_toTopOf="@+id/quantityLabel"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/packagingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_packaging"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityLabel" />

    <TextView
        android:id="@+id/packaging"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_packaging"
        app:layout_constraintBottom_toBottomOf="@+id/packagingLabel"
        app:layout_constraintLeft_toRightOf="@+id/packagingLabel"
        app:layout_constraintStart_toEndOf="@+id/packagingLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/packagingLabel" />
</android.support.constraint.ConstraintLayout>